2007-05-07  Ragha Vendra <raghavendra@zresearch.com>

	* ipmiconsole/src/ipmiconsole/Makefile.am: Fix include path
	compile issue.
	
2007-05-07  Tom Zimmerman <tzimmerman@lnxi.com>

	* ipmi-pef/src/ipmi-pef-wrapper.c (get_pef_info): Fix field name
	typo.
	
2007-05-05  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-coding.txt, doc/freeipmi-hostrange.txt: Update
	text.

	* ipmipower/: Support an additional "password verification
	timeout" error code.

	* doc/freeipmi-faq.texi: Update text.

	* /: Various minor doc updates.

	* ipmimonitoring/src/ipmimonitoring/ipmimonitoring.c
	(_ipmimonitoring): Tweak output format.

	* ipmimonitoring/: Minor manpage text fixes.
	
2007-05-04  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c
	(ipmiconsole_ctx_create): Change API to support k_g len.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.c
	(_check_for_authentication_support): Fix state machine corner case.

	* ipmiconsole/src/ipmiconsole_config.c (_cmdline_parse): Fix -K
	corner case.

	* ipmipower/src/ipmipower_config.c
	(ipmipower_config_cmdline_parse): Fix -K corner case.

	* libfreeipmi/src/ipmi-utils.c (ipmi_check_cmd,
	ipmi_check_completion_code): check obj-cmd w/ fiid_obj_valid().

	* doc/freeipmi-coding.txt, doc/freeipmi-hostrange.txt: new docs.

	* doc/Makefile.am, freeipmi.spec.in: Update for new docs.

2007-05-04  Levi Pearson <lpearson@lnxi.com>

	* ipmiconsole/: Support hex keys in ipmiconsole and
	libipmiconsole.

2007-05-03  Levi Pearson <lpearson@lnxi.com>

	* bmc-config/src/bmc-serial-conf-section.c
	(connect_mode_checkout): Fix strdup bug.

	* bmc-config/src/bmc-lan-conf-security-keys-section.c
	(k_g_checkout, k_g_commit, k_g_diff, k_g_validate): Support hex
	code input/output for K-g.

	* common/src/ipmi-common.c, common/src/ipmi-common.h (parse_kg,
	format_kg): Add const to appropriate parameters.
	
2007-05-03  Albert Chu <chu11@llnl.gov>
